plang/testing/logs/false-incorrect/177/program177.p.p
x (co4y tNFS (m5xnD (OwYNJ) (AKWP) (JK8) Bcrrq)) QjP7i (LTrn).

k (P).

e YQK (eJLs (Wa) ZArD) (X) :- ((t2, j (qg) (Rbqg); ns tQmt)), (h5rD o3O); w (lMu).
l (UX4b) (eN (jqXk gV6h (mK) (yS dAH (Xac) (n (eGt)) (DwB6)) PJSkI) WwGxK) (chYj) q :- (yr t Cw1 zY ndzF2, h2 e), hT (OV); fJ (FQG) JDs0 (D) gipd; b6pKl; qo (uv14x) jSIE (h15M (BLWmC) jFTVf psHa), ean1 (kvuF), (aig (WB5W)), gv2v jtEzp; fuL1n ebTzs (EOA); o (LN); sVzjk jv; zJzVV (Rd) (y (oy YH is1) k3r).


w8.
uK6 (H) (nL4) (X5).


yIA (H) (BdN2C) f5Az.


n (cHT1 (Pf)) Fo :- dH s3 (A) hIy8; pdvDi (nhvA (VL0M) eQ (kg02 Vj (jKsl (JleJ) W) s)) h4, qn; laA5 Era gXo2 (zN (F4) (eyFWk dxgnp nI5) zV (zT)), (hb0 (T8FD) jIrdt (V) (pj0 ylV0 (r (f lNG (c uV07X K))) e); fd (hSr9h nj (Clz)) (N) (S) (TX); ewFv, x (MNeS5) c7w Hah); cDR (W) x0Q L; t1hTj (oV (aD6rJ tNZ)) r0.
tC (vrD bb (uT5Zw)) (ax (Tt) C7 (hf (jF Lkg (wzr9 A y) (q8EV)) ZcW wSC) (P)) :- (qlMSM (vz ZD1hu) O; (nUn (AFj) (Hod) gEfKh (TRFXT)); wq n; nj6 A6Tj, (bHZz (LOW) am, jm5V VAfE9 xJJsQ (NkQ) (m (grd (yGFk (u (OFgs) (Kk) (nzbOq YklC Cju8f (T7WUp)) (QYlzj)) (n)) (Fr7QD) (z (O) FU zCRKO (Sfr7))) (nXKE mKo) (k) caeK), qsqH R9 YQIj pBD HH)).


nsA fX O4 :- (((t9 (Y1m) vYyH8 (xMiu1 (i4pTp Cch ZpW) (uovuy mfyqn) (M3WgS) w5dof) (B); rws27 (kHqWg ispB3 (BMtO) (Q8fX2) (av TL (V3McG) foh)) qPKt (YpIB)))).


? uj (UPmk) (AeY74) (PZvIn); ctZ6.
